# breathpause

./: .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  LICENSE  README.md  RELEASING.md  SKINS.md  run-tests.ps1  run-tests.sh  settings-mockups.html
.github/workflows/: ci.yml  installer-smoke.yml  release.yml  winget.yml
app/: package-lock.json  package.json  pattern-editor.html  playwright.config.js  settings.html  vite.config.js
app/e2e/: _helpers.js  bubble.spec.js  pattern-editor.spec.js  settings.spec.js  skin-import.spec.js
app/public/: settings.html  variants.html
app/public/skins/cute-bear/: breathing-demo.html  skin.json
app/public/skins/orb/: skin.json
app/public/skins/sleepy-seal/: skin.json
app/public/skins/sweet-jelly/: skin.json
app/src/: App.svelte  PatternEditor.svelte  Settings.svelte  app.css  pattern-editor-main.js  settings-main.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/core/: breathing.js  pattern.js  pomodoro.js  strings.js  timefmt.js
app/src/lib/: Stepper.svelte  interactivity.js  settings-store.js  skin.js  window-state.js
app/test/: breathing.test.mjs  ipc-contract.test.mjs  pattern.test.mjs  pomodoro.test.mjs  settings-store.test.mjs  skin-assets.test.mjs  skin.test.mjs  strings.test.mjs  timefmt.test.mjs
app/tools/: make-sleepy-seal.mjs
scripts/: set-version.mjs
src/macos/: main.js
src/macos/core/: breathing.js  eventlog.js  hotkeys.js  pomodoro.js  settings.js  strings.js  timefmt.js
src/macos/shell/: settingswindow.js  sound.js  storage.js  tray.js  window.js
src/win/: main.ps1
src/win/core/: breathing.ps1  eventlog.ps1  hotkeys.ps1  pomodoro.ps1  settings.ps1  strings.ps1  timefmt.ps1
src/win/shell/: diagnostics.ps1  settingswindow.ps1  sound.ps1  storage.ps1  tray.ps1  window.ps1
test/macos/: breathing.test.js  eventlog.test.js  hotkeys.test.js  pomodoro.test.js  settings.test.js  strings.test.js  timefmt.test.js
test/win/: breathing.Tests.ps1  eventlog.Tests.ps1  hotkeys.Tests.ps1  pomodoro.Tests.ps1  settings.Tests.ps1  strings.Tests.ps1  timefmt.Tests.ps1
tools/: breathpause.wsb  smoke-log.ps1
