[package]
name = "app"
version = "0.1.0"
description = "Always-on-top breathing + pomodoro bubble"
authors = ["Markus Wildgruber"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Used by `tauri build` for production: embeds the frontend via the asset protocol
# instead of loading the dev server. Without it, release builds run in dev mode
# (and try to reach the Vite dev server). DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
